# weag

./: .dockerignore  .env.example  .env.template  .gitignore  AGENTS.md  README.md  a2a-scenario.toml  docker-compose.local.yml  docker-compose.yml  docker-test.ps1  generate_compose.py  kickstart_assessment.py  pyproject.toml  pyrightconfig.json
.git-old/: HEAD  ORIG_HEAD  index
.git-old/refs/heads/: 001-browsergym-green-agent  002-real-evaluation  004-openai-agent-integration  005-kickstart-assessment
.github/workflows/: green-agent.yml  purple-agent.yml
docs/: A2A_MIGRATION.md  ASSESSMENT_QUICK_REFERENCE.md  BROWSER_VISIBILITY.md  CODE_SIMPLIFICATION_GUIDE.md  DOCKER_DEPLOYMENT.md  DOCKER_LOCAL_TESTING.md  GREEN_AGENT_ANALYSIS.md  LANGFUSE_TRACING.md  LLM_ABSTRACTION.md  LLM_PROVIDERS.md  LOGGING.md  MESSAGE_BASED_A2A_FLOW.md  RUNNING_A2A_SYSTEM.md  SIMPLIFICATION_PLAN.md  SIMPLIFICATION_RESULTS.md  TASK_GOAL_INCLUSION.md
green-agent/: Dockerfile  README.md  pyproject.toml
green-agent/results/: agentbeats-results-20260115-210245.json  agentbeats-results-20260115-215826.json  agentbeats-results-20260117-015109.json
green-agent/src/: __init__.py  main.py
green-agent/src/a2a/: __init__.py  agent_card.py  artifact_helpers.py  executor.py  message_builders.py  message_handler.py  models.py  streaming.py  streaming_helpers.py  validation_helpers.py
green-agent/src/agent/: __init__.py  agent_factory.py  context.py  instructions.py  message_utils.py  monitoring.py  tracing.py
green-agent/src/agent/guardrails/: __init__.py  input_guardrails.py  output_guardrails.py
green-agent/src/agent/sessions/: __init__.py  session_factory.py  session_storage.py
green-agent/src/agent/tools/: __init__.py  assessment_tools.py  communication_tools.py  environment_tools.py  evaluation_tools.py  monitoring_tools.py  multi_task_tools.py
green-agent/src/agent/tools/helpers/: __init__.py
green-agent/src/api/: __init__.py  health.py
green-agent/src/assessment/: __init__.py  helpers.py  models.py  orchestrator.py  tracker.py
green-agent/src/benchmarks/: __init__.py  constants.py  manager.py  profiles.py  task_discovery.py  tool_handlers.py  tool_registry.py
green-agent/src/config/: __init__.py  settings.py
green-agent/src/environment/: __init__.py  action_entities.py  action_executor.py  axtree_utils.py  entities.py  filter_helpers.py  helpers.py  observation_filter.py  observation_utils.py  session_manager.py  thread_executor.py
green-agent/src/mcp/: __init__.py  helpers.py  introspection_helpers.py  mcp_management.py  server.py  tool_details.py  tool_introspection.py
green-agent/src/metrics/: __init__.py  penalty_calculator.py  tracker.py
green-agent/src/recovery/: __init__.py  failure_handler.py
green-agent/src/resources/: __init__.py  health_checker.py  process_monitor.py  resource_manager.py
green-agent/src/security/: __init__.py  input_validator.py  rate_limiter.py  secrets_redactor.py
green-agent/src/utils/: __init__.py  activity_watchdog.py  docker_detection.py  exceptions.py  llm_provider.py  logging.py  models.py  shared_state.py  token_estimator.py
green-agent/tests/: conftest.py  test_agent.py
purple-agent/: Dockerfile  README.md  pyproject.toml
purple-agent/src/: README.md  __init__.py  a2a_client.py  agent_card.py  config.py  executor.py  llm_provider.py  main.py
purple-agent/src/agent/: __init__.py  agent_factory.py  context.py  instructions.py
purple-agent/src/tools/: __init__.py  action_generator.py  mcp_proxy_tools.py  mcp_tools.py  observation_parser.py
purple-agent/src/utils/: __init__.py  logging.py
purple-agent/tests/: conftest.py  test_agent.py
resources/: RESEARCH_AND_PLAN.md  RESOURCES.md  agentbeats-greenagent-template.txt  agentbeats-purpleagent-template.txt  agentbeats-tutorial-github.txt  agentsbeats-docs.txt  browsergym-demoagent.txt
scenarios/browsergym/: scenario-docker.toml  scenario-local.toml  scenario.toml
scripts/: debug_browser_env.py  debug_click.py  inspect_guardrails.py  run_agent_test.py  run_mcp_server_standalone.py  setup_local_datasets.py  test_a2a_flow.py  test_browser_visible.py  test_discovery.py  test_emit_task_update.py  test_emit_task_update_tb.py  test_mcp_connection.py  test_task_plan.py
tests/: TESTING_SUMMARY.md
tests/contract/: test_a2a_mcp_message.py  test_a2a_message_send.py  test_a2a_task_schema.py  test_agent_card_schema.py  test_agent_tools_contract.py
tests/fixtures/: __init__.py  mock_mcp_server.py
tests/integration/: conftest.py  profile_performance.py  test_a2a_isolation.py  test_agent_evaluation_flow.py  test_agent_mcp_health.py  test_agent_streaming.py  test_default_config.py  test_full_evaluation.py  test_green_a2a_message.py  test_integration.py  test_integration_no_emoji.py  test_kickstart_flow.py  test_mvp.py  test_purple_agent_integration.ps1  test_purple_agent_integration.sh  test_real_eval.py  test_results_export.py
tests/unit/: test_agent_context.py  test_agent_guardrails.py  test_agent_sessions.py  test_agent_tools.py  test_axtree_utils.py  test_benchmark_profiles.py  test_error_artifacts.py  test_mcp_connection_message.py  test_multi_benchmark.py  test_observation_filtering.py  test_purple_agent_message_flow.py  test_shared_state.py
tests/utils/: __init__.py  contract_validation.py
