[project]
name = "weag-kickstart"
version = "0.1.0"
description = "Kickstart script for WEAG assessment orchestration"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "WEAG Team"}
]
keywords = ["agentbeats", "kickstart", "orchestration"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Minimal dependencies for kickstart_assessment.py only
# Green agent and Purple agent have their own venvs with full dependencies
dependencies = [
    "httpx>=0.28.0",         # HTTP client for A2A communication
    "python-dotenv>=1.1.1",  # Environment variable loading
    "langfuse>=2.0.0",       # Tracing (optional but used)
    "psutil>=5.9.0",         # Process detection (optional)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell hatch we're not building a package (script-only project)
[tool.hatch.build.targets.wheel]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
